--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style = "background-color: rgb(244, 244, 244);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div   id="root"></div>
+    <div id="root"></div>
     <!-- style = "height:1000vh;  display: flex; flex-direction: column; justify-content: space-around;" -->
     <!--
       This HTML file is a template.
